🔨 fix: flex-basis bug on safari iOS

--- a/src/assets/scss/blocks/_nav.scss
+++ b/src/assets/scss/blocks/_nav.scss
@@ -1,6 +1,10 @@
 @use '../base/vars';
 
 .nav {
+	&[data-parent='footer'] {
+		flex-shrink: 0;
+	}
+
 	&__list {
 		display: grid;
 		justify-content: start;
